# easy-failover

./: .clang-format  .gitignore  CMakeLists.txt  README.md
.github/workflows/: ci.yml  codeql.yml  packages.yml  release.yml
cmake/: install-dinit.cmake.in  install-openrc.cmake.in  install-runit.cmake.in  install-s6.cmake.in  install-systemd-unit.cmake.in
cockpit/: app.js  easy-failover.css  index.html  manifest.json
configs/: easy-failover.toml
docs/: cockpit-plugin.md  config-reference.md  dashboard-service.md  discovery-design.md  distro-packaging-notes.md  failover-safety.md  frontend-roadmap.md  install-package-layout.md  linux-capabilities.md  local-api-design.md  macos-support.md  service-dinit.md  service-openrc.md  service-runit.md  service-s6.md  ssh-onboarding-design.md  windows-support.md  write-api-design.md
packaging/dashboard/: README.md  easy-failover-dashboard.env.example  easy-failover-dashboard.service  easy-failover-dashboard.service.in
packaging/dashboard-pkg/: CMakeLists.txt
packaging/dashboard/deb/: postinst  postrm  prerm
packaging/dashboard/rpm/: postinst.sh  postrm.sh  prerm.sh
packaging/deb/: postinst  postrm  prerm
packaging/deb/dashboard/: postinst  postrm  prerm
packaging/dinit/: easy-failover.in
packaging/openrc/: easy-failover.initd.in
packaging/rpm/: dashboard-postinst.sh  dashboard-postrm.sh  dashboard-prerm.sh  postinst.sh  postrm.sh  prerm.sh
packaging/runit/easy-failover/: run.in
packaging/runit/easy-failover/log/: run.in
packaging/s6/easy-failover/: run.in
packaging/s6/easy-failover/log/: run.in
packaging/systemd/: easy-failover.service  easy-failover.service.in
scripts/: build.sh  install.sh  package-cockpit.sh  package-dashboard.sh  package.sh  uninstall.sh  version.sh
src/: main.cpp
src/api/: LocalApi.cpp  LocalApi.hpp
src/config/: Config.cpp  Config.hpp
src/core/: Election.cpp  Election.hpp  FailoverDecision.cpp  FailoverDecision.hpp  FailoverNode.cpp  FailoverNode.hpp  NodeState.hpp
src/discovery/: Beacon.cpp  Beacon.hpp  DiscoveryTransport.hpp  Hmac.cpp  Hmac.hpp  LinuxUdpDiscoveryTransport.cpp  LinuxUdpDiscoveryTransport.hpp  PeerTable.cpp  PeerTable.hpp
src/health/: HealthCheck.cpp  HealthCheck.hpp
src/heartbeat/: HeartbeatLoop.cpp  HeartbeatLoop.hpp  HeartbeatMessage.cpp  HeartbeatMessage.hpp  HeartbeatTransport.cpp  HeartbeatTransport.hpp  UdpHeartbeatTransport.cpp  UdpHeartbeatTransport.hpp
src/platform/: Hostname.hpp  MacAddress.hpp  NetworkCommandRunner.cpp  NetworkCommandRunner.hpp  VipManager.hpp  VipOwnershipProbe.hpp
src/platform/linux/: LinuxHealthCommandRunner.cpp  LinuxHealthCommandRunner.hpp  LinuxHostname.cpp  LinuxMacAddress.cpp  LinuxNetworkCommandRunner.cpp  LinuxNetworkCommandRunner.hpp  LinuxVipManager.cpp  LinuxVipManager.hpp  LinuxVipOwnershipProbe.cpp  LinuxVipOwnershipProbe.hpp
src/runtime/: DaemonRuntime.cpp  DaemonRuntime.hpp  RuntimeLog.cpp  RuntimeLog.hpp  ShutdownSignal.cpp  ShutdownSignal.hpp
tests/: core_tests.cpp
tests/fixtures/config/: invalid-api.toml  invalid-health.toml  invalid-heartbeat-table-type.toml  invalid-heartbeat.toml  invalid-priority-type.toml  minimal.toml  no-peers.toml
web/: .gitignore  README.md  next.config.mjs  package-lock.json  package.json
web/app/: globals.css  layout.tsx  page.tsx
web/app/api/nodes/: route.ts
web/app/api/nodes/[id]/: route.ts
web/app/api/nodes/[id]/config/: route.ts
web/app/api/onboard/: route.ts
web/lib/: api.ts
web/lib/config/: serialize.ts
web/lib/nodes/: probe.ts  registry.ts  types.ts
web/lib/onboarding/: README.md  cluster.ts  config.ts  onboard.ts  plan.ts  redact.ts  ssh.ts  types.ts
